# etude-pose-estimator

./: .editorconfig  .envrc.example  .envrc.secret  .gitignore  .markuplintrc.json  CLAUDE.md  Dockerfile  README.md  Taskfile.yml  pyproject.toml  test_components.py
.github/ISSUE_TEMPLATE/: feat.md
.github/workflows/: claude-code-review.yml  claude.yml
.gitsecret/keys/: pubring.kbx  trustdb.gpg
.gitsecret/paths/: mapping.cfg
app/: main.py  pose_analyzer.py  pose_estimator.py
app/templates/: index.html  register_result.html  result.html
scripts/: download_models.py  setup_motionbert.sh
src/etude_pose_estimator/: config.py  main.py
src/etude_pose_estimator/api/: routes.py
src/etude_pose_estimator/core/: advice.py  angle.py  compare.py  joint_names.py  pose_2d.py  pose_3d.py  reference.py  visualization.py
src/etude_pose_estimator/motionbert/: DSTformer.py  __init__.py
src/etude_pose_estimator/templates/: index.html  reference_detail.html  reference_list.html  register_result.html  result.html
tests/core/: test_advice.py  test_angle.py  test_compare.py  test_joint_names.py
