[project]
name = "etude-pose-estimator"
version = "0.1.0"
description = "Pose estimation prototype using MediaPipe Pose Landmarker"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "jinja2>=3.1.4",
    "python-multipart>=0.0.12",
    "mediapipe>=0.10.14",
    "numpy>=2.0.0",
    "scipy>=1.14.0",
    "pillow>=10.4.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.isort]
known-first-party = ["app"]
