[project]
name = "etude-pose-estimator"
version = "0.1.0"
description = "Hero show pose quality management system (étude version)"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0" }
authors = [
    { name = "sforzando", email = "contact@sforzando.co.jp" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
]

dependencies = [
    # FastAPI and server
    "fastapi>=0.128.0,<0.129.0",
    "uvicorn[standard]>=0.40.0,<0.41.0",
    "jinja2>=3.1.6,<3.2.0",
    "python-multipart>=0.0.21,<0.1.0",
    "pydantic-settings>=2.12.0,<2.13.0",

    # Machine Learning - YOLO11x
    "ultralytics>=8.3.246,<8.4.0",
    "torch>=2.9.1,<2.10.0",
    "torchvision>=0.24.1,<0.25.0",

    # Pose processing
    "scipy>=1.16.3,<1.17.0",
    "opencv-python>=4.12.0,<4.13.0",
    "numpy>=2.2.0,<2.3.0",

    # AI - Gemini 3 Flash
    "google-genai>=1.57.0,<1.58.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.14.11,<0.15.0",
    "pytest>=9.0.2,<9.1.0",
    "pytest-cov>=7.0.0,<7.1.0",
    "pytest-asyncio>=1.3.0,<1.4.0",
    "httpx>=0.28.1,<0.29.0",
]

[build-system]
requires = ["setuptools>=75.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["etude_pose_estimator"]
package-dir = {"" = "src"}

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
# External library: MotionBERT (MIT License)
"src/etude_pose_estimator/motionbert/*" = ["ALL"]

[tool.ruff.lint.isort]
known-first-party = ["etude_pose_estimator"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --cov=etude_pose_estimator --cov-report=term-missing --cov-report=html --cov-fail-under=80"

[tool.coverage.run]
omit = [
    "*/motionbert/*",  # External library (MIT License)
]
